Making it responsive

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 
 
+.rightToLeft{
+    direction: rtl;
+}
+
 @font-face {
     font-family: "aktifoa-bold";
     src: url("./assets/fonts/aktifoa-bold.otf");
